<resources>
    <string name="app_name">Quezy</string>
    <string name="queezy">Queezy</string>
    <string name="open_title">Ambil dan Jelajahi Tantangan</string>
    <string name="open_title_2">Bersama Temanmu</string>
    <string name="login">Masuk menggunakan akun Google</string>
    <string name="image">img</string>
    <string name="greeting">Hello, welcome!</string>
    <string name="username">John Doe</string>
    <string name="profile">Profile</string>
    <string name="google_web_client_id">YOUR_WEB_CLIENT_ID</string>
    <string name="google_logo_description">logo</string>
    <string name="paket">0/10</string>
    <string name="soal">Your question text goes here</string>
    <string name="next">Next</string>
    <string name="selamat_kamu_telah_menyelesaikan_soal">Selamat Kamu Telah\nMenyelesaikan Soal</string>
    <string name="nilai_kamu">Nilai Kamu:</string>
    <string name="_100">100</string>
    <string name="kembali_ke_home">Kembali Ke Home</string>
</resources>