<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".HomeActivity"
    tools:ignore="MissingDefaultResource">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/username"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/greeting"
            android:textStyle="normal"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/greeting"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/username"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/image_circular"
            android:contentDescription="@string/profile" />

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:id="@id/info"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="40dp"
            android:background="@color/pink"
            app:cardBackgroundColor="@color/pink"
            app:layout_constraintTop_toBottomOf="@id/username">

        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/bottomCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="240dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/idCourseRV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
